--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
 			mui.plusReady(function() {
 
 				var user_name = myStorage.getItem('user_name');
-//				myStorage.setItem("address", "http://192.168.1.101");
-				myStorage.setItem("address", "http://xkwrsb.natappfree.cc");
+				myStorage.setItem("address", "http://192.168.1.101");
+//				myStorage.setItem("address", "http://xkwrsb.natappfree.cc");
 				var address = myStorage.getItem("address");
 
 				if(!user_name) {
