--- a/html/login.html
+++ b/html/login.html
@@ -232,7 +232,7 @@
 									myStorage.setItem("emp_id", userInfo.userId);
 									myStorage.setItem("dept_id", userInfo.deptId);
 //									myStorage.setItem("rank", userInfo.rank);
-//									myStorage.setItem("c_id", data.c_id);
+									myStorage.setItem("c_id", "c_id");
 									myStorage.setItem("dept_name", userInfo.deptName);
 									myStorage.setItem("pos_name", userInfo.roleNames);
 									myStorage.setItem("emp_name", userInfo.name);
